Fixed overflow issue on address modal

--- a/client/src/css/flightresults/travelersinfomodal.css
+++ b/client/src/css/flightresults/travelersinfomodal.css
@@ -280,6 +280,7 @@ input[type="date"]::placeholder{
     border-top-left-radius: 0.75rem;
     border-top-right-radius: 0.75rem;
     color: #0F172A;
+    padding-top: .25rem;
 }
 .travelerinfowrap{
     display: flex;
